--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -10,7 +10,6 @@
     <param-name>log4jConfigLocation</param-name>
     <param-value>classpath:log4j.xml</param-value>
   </context-param>
-  
   <listener>
     <description>加载spring配置文件的监听器</description>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -20,7 +19,6 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>/WEB-INF/root-context.xml</param-value>
   </context-param>
-  
   <servlet>
     <description>核心分发器</description>
     <servlet-name>dispatcher</servlet-name>
@@ -29,13 +27,13 @@
       <param-name>contextConfigLocation</param-name>
       <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
     </init-param>
+    <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
     <url-pattern>*.htm</url-pattern>
   </servlet-mapping>
   <filter>
-  
     <description>字符过滤器</description>
     <filter-name>characterEncodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -52,8 +50,6 @@
     <filter-name>characterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-
-  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
